fix(homepage): 3rd line cut off on featured card title

--- a/style/home.css
+++ b/style/home.css
@@ -199,6 +199,7 @@
   .home-page .featured.card h2 {
     font-size: 2.25rem;
     line-height: 2.8rem;
+    max-height: 8.4rem;
   }
 
   .home-page .featured.card .hero {
